# AI-Voice-agent

./: .gitignore  README.md  debug_patterns.py  debug_websocket.py  test_end_to_end.py  test_form_behavior.py  test_form_field_filling.py  test_frontend_voice_command.py  test_frontend_websocket.py  test_single_command.py  test_voice_command.py  test_voice_commands_final.py  test_voice_form_commands.py  test_websocket_browser.html
backend/: .env  .replit  config.py  main.py  pyproject.toml  replit.md  run.txt  test_websocket_client.py
backend/pipelines/: __init__.py  audio_pipeline.py
backend/routes/: websocket.py
backend/schemas/: __init__.py  audio_schemas.py  rtvi_schemas.py
backend/services/: __init__.py  audio_service.py  gemini_live_service.py  gemini_service.py  rtvi_service.py  simplified_gemini_service.py
backend/static/: index.html
backend/utils/: logger.py
frontend/: .gitignore  README.md  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: mic-stream.tsx  voice-form.tsx
frontend/utils/: audio-processor.ts  ws.ts
